# coop-fd

./: .gitignore  Cargo.toml  README.md  config.sample.json  flake.nix  module.nix  shell.nix  style.css
fiscal-data/: Cargo.toml  README.md
fiscal-data-derive/: Cargo.toml
fiscal-data-derive/src/: lib.rs
fiscal-data/src/: enums.rs  fields.rs  json.rs  lib.rs  structs.rs
src/: legacy.rs  main.rs  server.rs
src/ofd/: astral.rs  beeline.rs  eofd.rs  icom24.rs  irkkt_mobile.rs  magnit.rs  mod.rs  ofd_ru.rs  oneofd.rs  platforma_ofd.rs  private1.rs  taxcom.rs
static/: README.md  README.txt  add.html  fzf.js  index.html  style.css
templates/: add.html  index.html  list.html  submitted.html
templates/irkkt-mobile/: auth.html  redirect.html
