[package]
name = "coop-ofd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = { version = "0.4.31", features = ["serde"] }
dashmap = "5.5.3"
html-escape = "0.2.13"
indexmap = { version = "2.1.0", features = ["serde"] }
leptess = "0.14.0"
liquid = "0.26.4"
liquid-core = { version = "0.26.4", features = ["derive"] }
log = "0.4.20"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls-native-roots", "cookies"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "sync", "fs"] }
uuid = { version = "1.6.1", features = ["v4"] }
