[workspace]
members = ["fiscal-data", "fiscal-data-derive"]

[package]
name = "coop-fd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
chrono = { version = "0.4.31", features = ["serde"] }
dashmap = "5.5.3"
env_logger = "0.10.1"
indexmap = { version = "2.1.0", features = ["serde"] }
liquid = "0.26.4"
liquid-core = { version = "0.26.4", features = ["derive"] }
log = "0.4.20"
reqwest = { version = "0.11.22", default-features = false, features = ["rustls-tls-native-roots", "cookies", "json", "multipart"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "sync", "fs"] }
uuid = { version = "1.6.1", features = ["v4"] }
fiscal-data = { path = "./fiscal-data" }
thiserror = "1.0.60"
async-trait = "0.1.80"
http-body = "0.4"

[dev-dependencies]
tokio-test = "0.4.4"
